# janawaaz

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml  sweep-trigger.yml
docs/: DEPLOY.md  blog-draft.md  demo-video-shotlist.md  janawaaz-deck.pptx  presentation.md  research-notes.md
janawaaz/: __init__.py  config.py  db.py  models.py  workflows.py
janawaaz/adapters/: __init__.py  base.py  rbi.py  sebi.py  trai.py
janawaaz/pipeline/: extract.py  matching.py  notify.py  runner.py  summarize.py
janawaaz/web/: app.py
janawaaz/web/static/: styles.css
janawaaz/web/templates/: base.html  consultation.html  feed.html  landing.html  ledger.html  onboard.html  onboarded.html
scripts/: init_db.py  seed_corpus.py  trigger_sweep.py
tests/: conftest.py  test_deadline_extraction.py  test_gate.py  test_gate_flow.py  test_quality_and_tokens.py  test_rbi_adapter.py  test_trai_adapter.py  test_web_flow.py
tests/fixtures/: rbi_drafts.html  trai_listing.html
