[project]
name = "janawaaz"
version = "0.1.0"
description = "The agent that tells you when your government is asking for your opinion — with proof, in your own language, before the window closes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "render-sdk>=0.7.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pymupdf>=1.26",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "google-genai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["janawaaz"]
